Various findbugs bugs squashed.